@@ -1,5 +1,14 @@
 2010-06-23  Colin Watson  <cjwatson@ubuntu.com>
 
+	* loader/i386/multiboot_mbi.c (retrieve_video_parameters): Set red
+	field position and mask size to red fields from mode_info, not
+	green.
+	* loader/multiboot_mbi2.c (retrieve_video_parameters): Likewise.
+	Remove redundant tag->common.framebuffer_type assignment.
+	Reported by: Seth Goldberg.
+
+2010-06-23  Colin Watson  <cjwatson@ubuntu.com>
+
 	Sync up other versions of the Linux loader with Robert Millan's
 	change of 2010-01-09, "Make loader output a bit more user-friendly".
 
